--- a/Menu/menu.html
+++ b/Menu/menu.html
@@ -29,7 +29,7 @@
     <!-- CABEÇALHO E NAVEGAÇÃO -->
     <header class="cabecalho-principal">
         <div class="container">
-            <img src=".../Galeria/logo.png" alt="logo" class="logo">
+            <img src="../Galeria/logo.png" alt="logo" class="logo">
             <nav class="nav-principal" id="main-nav">
                 <a href="#sobre">Sobre</a>
                 <a href="#servicos">Serviços</a>
@@ -60,7 +60,7 @@
             <div class="container animate-on-scroll">
                 <div class="conteudo-sobre">
                     <div class="imagem-sobre animate-on-scroll">
-                        <img src=".../Galeria/Bruno_.png" alt="Foto profissional de Bruno Garcez">
+                        <img src="Galeria/Bruno_.png" alt="Foto profissional de Bruno Garcez">
                     </div>
                     <div class="texto-sobre animate-on-scroll">
                         <h2 class="titulo-secao" style="text-align: left; margin-bottom: 1rem;">Conheça Bruno Garcez</h2>
